# GlassCockpit

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_install.cmake  compile_commands.json  readme.org
Data/: Preferences.xml
PlatformSupport/MacOSX/GlassCockpit.xcodeproj/project.xcworkspace/xcuserdata/boo.xcuserdatad/: UserInterfaceState.xcuserstate
PlatformSupport/MacOSX/GlassCockpit.xcodeproj/xcuserdata/boo.xcuserdatad/xcschemes/: xcschememanagement.plist
PlatformSupport/iOS/GlassCockpit.xcodeproj/project.xcworkspace/xcuserdata/boo.xcuserdatad/: UserInterfaceState.xcuserstate
PlatformSupport/iOS/GlassCockpit.xcodeproj/xcuserdata/boo.xcuserdatad/xcschemes/: xcschememanagement.plist
Source/Base/: CMakeLists.txt  CalcManager.h  Gauge.cpp
Source/DataSources/: CMakeLists.txt  FGDataSource.cpp  FGDataSource.h  airframe_data_container.h  data_container.cpp  data_container.h  data_source.h  property_generator.h
Source/Gauges/: CMakeLists.txt  MarkedDial.h  NavDisplay.cpp  NavDisplay.h  PieDial.cpp  PieDial.h
Source/Navigation/: CMakeLists.txt
include/config/: preference_manager.h
include/data/: airframe_data_container.h  albatross_data_source.h  fg_data_source.h
include/font/: Font.h
include/gauge/: AltitudeTape.h  ArtificialHorizon.h  CircleEvaluator.h  GaugeComponent.h  MarkedDial.h  PFD.h  RenderWindow.h  Tachometer.h
include/navigation/: airport_list.h  nav_database.h  raster_map_manager.h  raster_map_tile.h  waypoint_list.h
include/util/: conversion.h  gl_headers.h
resource/: Default.xml  Preferences.xml
sample/: AppObject.cpp  AppObject.h  CMakeLists.txt  FLTKRenderWindow.cpp  FLTKRenderWindow.h  Main.cpp  Makefile  copy-lib.sh  main.cpp  opengc  opengc-sample  sample
src/: version.cpp
src/base/: CMakeLists.txt  CalcManager.cpp  CalcManager.h  Font.cpp  Font.h  FontManager.cpp  Gauge.cpp  Gauge.h  GaugeComponent.cpp  GaugeComponent.h  Globals.cpp  Globals.h  Messageable.h  MessageableList.cpp  MessageableList.h  PrefManager.cpp  PrefManager.h  RenderObject.cpp  RenderObject.h  RenderWindow.cpp  XMLNode.cpp  XMLNode.h  XMLParser.cpp  XMLParser.h  preference_manager.cpp  preference_manager.h  xml_node.cpp  xml_node.h
src/config/: CMakeLists.txt  preference_manager.cpp  xml_node.cpp  xml_parser.cpp  xml_parser.h
src/data/: CMakeLists.txt  airframe_data_container.h  albatross_data_source.cpp  albatross_data_source.h  data_container.h  data_source.cpp  data_source.h  data_source_manager.cpp  data_source_manager.h  fg_data_source.cpp  fg_data_source.h  fg_protocol.h  property_generator.h  test_data_source.cpp  test_data_source.h
src/font/: CMakeLists.txt  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Font_FileStore.cpp  Font_FileStore.h  Font_FileStore_BinaryIO.cpp  Font_GLTexture.cpp  Font_GLTexture.h
src/gauge/: AltitudeTape.cpp  AltitudeTape.h  AltitudeTicker.cpp  ArtificialHorizon.cpp  CMakeLists.txt  CircleEvaluator.cpp  CircleEvaluator.h  EngineInstruments.cpp  EngineInstruments.h  FlightDirector.cpp  Gauge.cpp  Gauge.h  GaugeComponent.cpp  GaugeComponent.h  GenericBargraph.cpp  HeadingIndicator.cpp  MarkedDial.cpp  NavDisplay.cpp  NavDisplay.h  PFD.cpp  PFDOverlay.cpp  PieDial.cpp  PieDial.h  RenderObject.cpp  RenderObject.h  RenderWindow.cpp  SpeedTape.cpp  SpeedTape.h  SpeedTicker.cpp  Tachometer.cpp  Tachometer.h  VSI.cpp  VSI.h
src/libshape/: CMakeLists.txt
src/navigation/: AirportGeoObj.h  AirportList.cpp  AirportList.h  BinaryNavData.cpp  BinaryNavData.h  CMakeLists.txt  GeographicHash.cpp  GeographicHash.h  GeographicObject.cpp  GeographicObject.h  GeographicObjectList.cpp  GeographicObjectList.h  NavDatabase.cpp  NavDatabase.h  NavaidGeoObj.cpp  NavaidGeoObj.h  NavaidList.cpp  NavaidList.h  RasterMapManager.cpp  RasterMapManager.h  RasterMapTile.h  WaypointGeoObj.h  WaypointList.cpp  WaypointList.h  airport_list.cpp  binary_nav_data.cpp  flight_course.h  geographic_hash.cpp  geographic_hash.h  geographic_object.h  geographic_object_list.cpp  geographic_object_list.h  nav_aid_geo_obj.h  nav_aid_list.cpp  nav_aid_list.h  nav_database.cpp  raster_map_manager.cpp  raster_map_tile.cpp  waypoint_geo_obj.h  waypoint_list.cpp
src/tinyjpeg/: CMakeLists.txt  CMakeLists.txt~
src/util/: Constants.h  Conversion.h  constants.h
